	- Fixed #0995: Defect - Missing scrollbar in Ftp directory chooser dialog
	- Fixed #1000: Bug - When a domain is being disabled, apache won't restart
	- Fixed #1002: Defect - Plugin Version does not change on update
	- Fixed #1003: Defect: Admin/Reseller statistic shows only the current year
	- Fixed #1004: Defect - Unable to find any network interface. You cannot add new IP address

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.7
------------------------------------------------------------------------------------------------------------------------

2013-11-21: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.7

CONFIG:
	- Added: Vagrantfile allowing to setup a virtual machine using Vagrant
	- Removed: DATABASE_UTF8 parameter

DOCS:
	- Fixed: Updated preseed template file

ENGINE:
	- Fixed: imscp-del-tmp script is broken (Undefined subroutine floor...)
	- Fixed: Plugin (backend part) must be re-installed if missing
	- Fixed: Plugin (backend part) must be removed on compile time error
	- Fixed: Plugin (backend part) must be removed when a plugin is being deactivated
	- Fixed: Quota script is broken (A critical error has been encountered while executing function main::quotaSql...)
	- Removed: iMSCP::Database::mysql::Result

GUI:
	- Added: onBeforeSendCircular and onAfterSendCircular events
	- Added: Spam Filter option which allow to keep postfix configuration (external mail server interface)
	- Changed: EventsManager - listener stack become a priority queue (Performance issues)
	- Fixed: Configuration variable `/var/log/rkhunter.log` is missing
	- Fixed: Set internal encoding to UTF-8
	- Fixed: Use mb_encode_mimeheader() to encode MIME header when available
	- Fixed: Identity garbage on session timeout
	- Rewritten: Circular interface (admin and reseller levels)
	- Updated: plugin API (version 0.2.0)

SETUP: